<resources>
    <string name="app_name">Desafio1</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="image">image</string>
    <string name="name">Name</string>
    <string name="owner">Owner</string>
    <string name="age">Age</string>
    <string name="button">Edit</string>
    <string name="spinner">Animal</string>
</resources>